Added random forest predictions

--- a/app/static/html/model-sections/section1.html
+++ b/app/static/html/model-sections/section1.html
@@ -114,7 +114,7 @@ y_pred = model.predict(X_test)</pre></code>
                     <pre><code class="language-python">from sklearn.metrics import mean_squared_error, mean_absolute_error
 mae = mean_absolute_error(y_test, y_pred)
 mse = mean_squared_error(y_test, y_pred)</pre></code>
-                    <p>We can now plot the "perfect prediction" line, i.e. predicted = actual, on a scatter plot with
+                    <p class = "graph">We can now plot the "perfect prediction" line, i.e. predicted = actual, on a scatter plot with
                         each point representing an observation. The x-axis is our predicted temperature, while the
                         y-axis is our actual temperature for the observation. Points closer to the diagonal line
                         indicate accurate predictions, while points farther from the line highlight larger discrepancies
