--- a/app/static/html/model-sections/section1.html
+++ b/app/static/html/model-sections/section1.html
@@ -38,7 +38,8 @@
                             independent,
                             which often doesn't hold true in weather data</li>
                     </ul>
-                    <p>We're going to use linear regression to identify relationships between our variables. But first,
+                    <p class=graph onclick=loadGraph(1)>We're going to use linear regression to identify relationships
+                        between our variables. But first,
                         let's clean the data and plot the correlation matrix. You can see the graph on the right panel
                         of the page. I chose the values that I thought would be the most helpful, without crowding the
                         matrix. Use the buttons to cycle through the graphs, but don't go too far ahead! Do you
@@ -114,7 +115,9 @@ y_pred = model.predict(X_test)</pre></code>
                     <pre><code class="language-python">from sklearn.metrics import mean_squared_error, mean_absolute_error
 mae = mean_absolute_error(y_test, y_pred)
 mse = mean_squared_error(y_test, y_pred)</pre></code>
-                    <p class = "graph">We can now plot the "perfect prediction" line, i.e. predicted = actual, on a scatter plot with
+                    <p class="graph" onclick=loadGraph(2)>We can now plot the "perfect prediction" line, i.e. predicted
+                        = actual, on a
+                        scatter plot with
                         each point representing an observation. The x-axis is our predicted temperature, while the
                         y-axis is our actual temperature for the observation. Points closer to the diagonal line
                         indicate accurate predictions, while points farther from the line highlight larger discrepancies
@@ -131,17 +134,20 @@ plt.text(0.95, 0.05, f'MAE: {mae:.2f}\nMSE: {mse:.2f}',
          transform=plt.gca().transAxes)
 plt.title('Comparison of Actual and Predicted Mean Temperatures')
 plt.legend()</pre></code>
-                    <p>Our predictions are remarkably accurate! To note, though, our predictions are too low as the
+                    <p class="graph" onclick=loadGraph(2)>Our predictions are remarkably accurate! To note, though, our
+                        predictions are too low as the
                         temperatures nears 30 degrees Celsius. Why might this be? Let's try removing the dewpoint metric
                         and seeing if we maintain this accuracy.</p>
                     <pre><code class="language-python">X.drop(['Mean Dewpoint'])</pre></code>
                     <span class="code-subtext">// Split the data, fit the line and predict again! </span>
-                    <p>This prediction wasn't quite as good. It turns out that the dewpoint's strong correlation with
+                    <p class="graph" onclick=loadGraph(3)>This prediction wasn't quite as good. It turns out that the
+                        dewpoint's strong correlation with
                         our target variable was important to our linear regression model. Let's try predicting mean
                         MSLP.</p>
                     <pre><code class="language-python">X = df_cleaned.drop(['Mean Sea Level Pressure'], axis = 1)
 y = df_cleaned['Mean Sea Level Pressure']</pre></code>
-                    <p>Not great, but not horrible. You can check out one last prediction for mean visibility at the end
+                    <p class="graph" onclick=loadGraph(4)>Not great, but not horrible. You can check out one last
+                        prediction for mean visibility at the end
                         of the graphs. Important note: do not evaluate our error metrics simply based on
                         magnitude. It
                         must be considered in relation to the scale of the target variable and in comparison to other
