--- a/app/static/html/model-sections/section4.html
+++ b/app/static/html/model-sections/section4.html
@@ -18,8 +18,8 @@
                     </iframe>
                 </div>
                 <div class="button-container">
-                    <button class=selector-button id="graph-lr-left" onclick="loadPreviousGraph()">&lt;</button>
-                    <button class=selector-button id="graph-lr-right" onclick="loadNextGraph()">&gt;</button>
+                    <button class=selector-button id="graph-deep-left" onclick="loadPreviousGraph()">&lt;</button>
+                    <button class=selector-button id="graph-deep-right" onclick="loadNextGraph()">&gt;</button>
                 </div>
             </div>
         </div>
